src/app/css/gallery-box.module.css
.galleryBox{
    display: flex;
    padding: 10px;
    flex-direction: column;
    background-color: white;
    width: 100%;
    z-index: 998;
}

.galleryHeader{
    text-align: center;
}

.galleryMainContainer{
    display: flex;
    height: calc(100vh - 150px);
    max-height: 600px;
}

.galleryNavigation{
    background-color: white;
    width: 15%;
}

.galleryItemListContainer{
    background-color: white;
    padding: 0px 10px;
    border-style: solid;
    border-width: 0px 1px;
    border-color: #3498db;
    width: 60%;
}

.galleryUploadArea{
    display: flex;
    height: 50px;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
}

.uploadBtn{
    display: inline-block;
    background-color: #4CAF50;
    color: white;
    padding: 10px 20px;
    font-size: 16px;
    text-align: center;
    text-decoration: none;
    border-radius: 2px;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s;
}

.uploadBtn:hover {
    background-color: #45a049;
  }

.galleryList{
    display:flex;
    flex-wrap: wrap;
    align-content: flex-start;
    height: calc(100% - 50px);
    overflow-y: auto;
}

.galleryItem{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 20%;
    padding: 10px;
}

.galleryItemImage{
    width: 100%;
}

.galleryItemDetails{
    background-color: white;
    width: 25%;
    padding: 10px;
    word-wrap: break-word;
}

.galleryImageContainer{
    display: flex;
    justify-content: center;
    width: 100%;
    padding: 5px;
}

.galleryDescriptionItemImage{
    max-width: 100%;
    max-height: 120px;
    height: auto; /* Ensures image maintains aspect ratio */
}

.deleteBtn{
    display: inline-block;
    background-color: #f44336;
    margin:5px;
    color: white;
    padding: 10px 20px;
    font-size: 16px;
    text-align: center;
    text-decoration: none;
    border-radius: 2px;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s;
}

.deleteBtn:hover {
    background-color: #d32f2f;
}

.selectBtn {
    display: inline-block;
    background-color: #1565c0; /* Blue color for select button */
    color: white;
    margin:5px;
    padding: 10px 20px;
    font-size: 16px;
    text-align: center;
    text-decoration: none;
    border-radius: 4px;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s;
}
  
.selectBtn:hover {
    background-color: #0d47a1; /* Darker blue color on hover */
}
.optionsContainer{
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
}
.smallBtn{
    background-color: white;
    padding: 0px;
    border: none;
    cursor: pointer;
}
.smallIcon{
    width: 20px;
    height: 20px;
}


/* Cropper */

.cropperContainer{
    padding: 15px;
    position: fixed;
    display: flex;
    flex-direction: column;
    left: 20vw;
    top: 20vh;
    width: 60vw;
    height: 60vh;
    z-index: 999;
}

.cropControls{
    padding: 5px;
}

.cropperImages{
    display: flex;
    flex-direction: row;
    padding: 15px;
    width: 100%;
    min-height: 300px;
}

.cropper{
    display: flex;
    justify-content: center;
    width: 50%;
    padding: 15px;
}

.previewContainer{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50%;
}

.buttonWrapper{
    display: flex;
}

.saveBtn{
    display: inline-block;
    background-color: #4CAF50;
    color: white;
    padding: 10px 20px;
    font-size: 16px;
    text-align: center;
    text-decoration: none;
    border-radius: 2px;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s;
}

.cancelBtn{
    display: inline-block;
    background-color: #f44336;
    color: white;
    padding: 10px 20px;
    font-size: 16px;
    text-align: center;
    text-decoration: none;
    border-radius: 2px;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s;
}





@media only screen and (max-width: 600px){
    .galleryBox{
        width: 100%;
        height: 100vh;
        overflow-y: auto;
        margin: 0;
        z-index: 1;
    }
    .galleryMainContainer{
        flex-direction: column;
    }
    
    .galleryNavigation{
        display: none;
    }
    .galleryItemListContainer{
        width: 100%;
        height: calc(50vh - 60px);
    }
    .galleryItem{
        width: 33.33%;
        height: auto;
    }
    .galleryItemDetails{
        width: 100%;
        display: flex;
    }
    .galleryImageContainer{
        width: 80px;
        height: auto;
    }
    .galleryItemInformation{
        width: calc(100% - 80px);
    }
    .galleryDescriptionItemImage{
        display: block;
        max-width: 100%; /* Ensure the image doesn't exceed the container width */
        height: auto;
        margin: auto;
    }
    .groupButton{
        display: flex;
    }

    /*Cropper*/

    .cropperContainer{
        width: 100vw;
        height: 100vh;
        left: 0;
        top:0;
        justify-content: center;
    }

    .cropperImages{
        flex-direction: column;
    }

    .cropper{
        width: 100%;
    }

    .previewContainer{
        width: 100%;
    }

    .buttonWrapper{
        justify-content:space-around;
        padding: 15px;
    }


}

